--- a/roles/cnos_save_sample/vars/main.yml
+++ b/roles/cnos_save_sample/vars/main.yml
@@ -1,9 +1,9 @@
 ---
-test_save_data1:
+cnos_save_data1:
   - {}
-test_save_data2:
+cnos_save_data2:
   - {}
-test_save_data3:
+cnos_save_data3:
   - {}
-test_save_data4:
+cnos_save_data4:
   - {}
