--- a/roles/cnos_conditional_template_sample/tasks/main.yml
+++ b/roles/cnos_conditional_template_sample/tasks/main.yml
@@ -1,12 +1,12 @@
 # This contain sample conditional template execution tasks
 ---
 - name: Replace Config CLI command template with values
-  template: src=demo_template.j2 dest=./commands/conditional_template_{{ inventory_hostname }}_{{ hostvars[inventory_hostname]['condition'] }}_commands.txt
+  template: src=demo_template.j2 dest=./commands/cnos_conditional_template_{{ inventory_hostname }}_command.txt
   with_items: "{{conditional_template_data1}}"
 
 - name: Applying CLI commands on Switches
   cnos_conditional_template: host={{ inventory_hostname }} username={{ hostvars[inventory_hostname]['username']}}  password={{ hostvars[inventory_hostname]['password']}} deviceType={{ hostvars[inventory_hostname]['deviceType']}} 
-   condition={{ hostvars[inventory_hostname]['condition'] }} flag='{{item.flag}}' commandfile=./commands/conditional_template_{{ inventory_hostname }}_{{ hostvars[inventory_hostname]['condition'] }}_commands.txt outputfile=./results/conditional_template_command_{{ inventory_hostname }}_output.txt
+   condition={{ hostvars[inventory_hostname]['condition'] }} flag='{{item.flag}}' commandfile=./commands/cnos_conditional_template_{{ inventory_hostname }}_command.txt outputfile=./results/cnos_conditional_template_{{ inventory_hostname }}_output.txt
   with_items: "{{conditional_template_data1}}"
 
 # Completed file
