--- a/roles/vlag_1tier_spine/tasks/main.yml
+++ b/roles/vlag_1tier_spine/tasks/main.yml
@@ -1,11 +1,11 @@
 # This contain tasks to configure VLAG Tier1 Spine switches and further show it
 ---
 - name: Replace VLAG Tier1 Spine CLI command template with values
-  template: src=vlag_1tier_spine_common.j2 dest=./commands/vlag_1tier_spine_{{ inventory_hostname }}_commands.txt
+  template: src=vlag_1tier_spine_common.j2 dest=./commands/vlag_1tier_spine_{{ inventory_hostname }}_common_commands.txt
   with_items: "{{vlag_1tier_spine_data}}"
 
 - name: Applying CLI commands on VLAG Tier1 Spine Switches
-  cnos_template: host={{ inventory_hostname }} username={{ hostvars[inventory_hostname]['username']}}  password={{ hostvars[inventory_hostname]['password']}} deviceType={{ hostvars[inventory_hostname]['deviceType']}} commandfile=./commands/vlag_1tier_spine_{{ inventory_hostname }}_commands.txt outputfile=./results/vlag_1tier_spine_command_{{ inventory_hostname }}_output.txt
+  cnos_template: host={{ inventory_hostname }} username={{ hostvars[inventory_hostname]['username']}}  password={{ hostvars[inventory_hostname]['password']}} deviceType={{ hostvars[inventory_hostname]['deviceType']}} commandfile=./commands/vlag_1tier_spine_{{ inventory_hostname }}_common_commands.txt outputfile=./results/vlag_1tier_spine_{{ inventory_hostname }}_common_output.txt
   with_items: "{{vlag_1tier_spine_data}}"
 
 # Pause for 5 seconds before next step.
@@ -34,11 +34,11 @@
 #- pause: seconds=5
 
 - name: Replace VLAG Tier1 Spine CLI show template with values
-  template: src=vlag_1tier_spine_show.j2 dest=./commands/vlag_1tier_spine_{{ inventory_hostname }}_show.txt
+  template: src=vlag_1tier_spine_show.j2 dest=./commands/vlag_1tier_spine_{{ inventory_hostname }}_show_commands.txt
   with_items: "{{vlag_1tier_spine_data}}"
 
 - name: Applying CLI show commands on VLAG Tier1 Spine Switches
-  cnos_template: host={{ inventory_hostname }} username={{ hostvars[inventory_hostname]['username']}}  password={{ hostvars[inventory_hostname]['password']}} deviceType={{ hostvars[inventory_hostname]['deviceType']}} commandfile=./commands/vlag_1tier_spine_{{ inventory_hostname }}_show.txt outputfile=./results/vlag_1tier_show_{{ inventory_hostname }}_output.txt
+  cnos_template: host={{ inventory_hostname }} username={{ hostvars[inventory_hostname]['username']}}  password={{ hostvars[inventory_hostname]['password']}} deviceType={{ hostvars[inventory_hostname]['deviceType']}} commandfile=./commands/vlag_1tier_spine_{{ inventory_hostname }}_show_commands.txt outputfile=./results/vlag_1tier_spine_{{ inventory_hostname }}_show_output.txt
   with_items: "{{vlag_1tier_spine_data}}"
 
 # Completed file
