--- a/roles/cnos_template_sample/tasks/main.yml
+++ b/roles/cnos_template_sample/tasks/main.yml
@@ -2,7 +2,7 @@
 ---
 - name: Replace Config CLI command template with values
   template: src=demo_template.j2 dest=./commands/cnos_template_{{ inventory_hostname }}_commands.txt
-  with_items: "{cnos_template_data}}"
+  with_items: "{{cnos_template_data}}"
 
 - name: Applying CLI commands on Switches
   cnos_template: host={{ inventory_hostname }} username={{ hostvars[inventory_hostname]['username']}}  password={{ hostvars[inventory_hostname]['password']}} deviceType={{ hostvars[inventory_hostname]['deviceType']}} commandfile=./commands/cnos_template_{{ inventory_hostname }}_commands.txt outputfile=./results/cnos_template_{{ inventory_hostname }}_output.txt
